# machaka

./: Cargo.toml  Makefile  README.md
.github/workflows/: main.yml
src/: cli.rs
